--- a/OpenGL-2D/OpenGL-2D.vcxproj
+++ b/OpenGL-2D/OpenGL-2D.vcxproj
@@ -60,6 +60,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="Stone.cpp" />
     <ClCompile Include="Text.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +70,7 @@
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Stone.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Text.h" />
   </ItemGroup>
