--- a/OpenGL-2D/OpenGL-2D.vcxproj
+++ b/OpenGL-2D/OpenGL-2D.vcxproj
@@ -79,6 +79,9 @@
     <ProjectReference Include="..\3rd-party\freeglut3\freeglut3.vcxproj">
       <Project>{5a98782e-7027-46f9-91e1-e1ede1e14bf4}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\SnakeTest\SnakeTest.vcxproj">
+      <Project>{524e7038-6e67-4f74-b89c-e8ba1ba33224}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
