--- a/OpenGL-2D/OpenGL-2D.vcxproj
+++ b/OpenGL-2D/OpenGL-2D.vcxproj
@@ -54,8 +54,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\AnimatedSprite.cpp" />
-    <ClCompile Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\TextureManager.cpp" />
+    <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="Apple.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="position.cpp" />
@@ -67,11 +66,11 @@
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Stone.cpp" />
     <ClCompile Include="Text.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\AnimatedSprite.h" />
-    <ClInclude Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\TextureManager.h" />
+    <ClInclude Include="AnimatedSprite.h" />
     <ClInclude Include="Apple.h" />
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="position.h" />
@@ -84,6 +83,7 @@
     <ClInclude Include="Stone.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Text.h" />
+    <ClInclude Include="TextureManager.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
@@ -92,6 +92,12 @@
   <ItemGroup>
     <ProjectReference Include="..\3rd-party\freeglut3\freeglut3.vcxproj">
       <Project>{5a98782e-7027-46f9-91e1-e1ede1e14bf4}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\3rd-party\glew-2.0.0\glew-2.0.0.vcxproj">
+      <Project>{c474717f-f37a-4201-ae32-871219c77803}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\3rd-party\SOIL\projects\VC9\SOIL.vcxproj">
+      <Project>{c32fb2b4-500c-43cd-a099-eecce079d3f1}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
