--- a/OpenGL-2D/OpenGL-2D.vcxproj
+++ b/OpenGL-2D/OpenGL-2D.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="Stone.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +84,7 @@
     <ClInclude Include="Stone.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Text.h" />
+    <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
@@ -102,6 +104,9 @@
     <ProjectReference Include="..\3rd-party\SOIL\projects\VC9\SOIL.vcxproj">
       <Project>{c32fb2b4-500c-43cd-a099-eecce079d3f1}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\3rd-party\tinyxml2\tinyxml2.vcxproj">
+      <Project>{d1c528b6-aa02-4d29-9d61-dc08e317a70d}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Text Include="inputfile.txt" />
@@ -109,6 +114,16 @@
   <ItemGroup>
     <Image Include="..\..\..\..\Desktop\fondo.jpg" />
     <Image Include="..\..\..\..\Desktop\Stone.jpg" />
+    <Image Include="img\alien-01.png" />
+    <Image Include="img\alien-02.png" />
+    <Image Include="img\bomb.png" />
+    <Image Include="img\fighter-01.png" />
+    <Image Include="img\fighter-02.png" />
+    <Image Include="img\fire-animation-1.png" />
+    <Image Include="img\fire-animation-2.png" />
+    <Image Include="img\fondo.jpg" />
+    <Image Include="img\Stone.jpg" />
+    <Image Include="img\Stone.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
