--- a/OpenGL-2D/OpenGL-2D.vcxproj.filters
+++ b/OpenGL-2D/OpenGL-2D.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\AnimatedSprite.cpp" />
-    <ClCompile Include="..\..\..\..\Downloads\project-aux-files(2)\project-aux-files\TextureManager.cpp" />
     <ClCompile Include="Apple.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="position.cpp" />
@@ -72,9 +70,42 @@
     <Text Include="inputfile.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\Desktop\textura manzana\RedApple.png" />
-    <Image Include="..\..\..\..\Desktop\textura manzana\GreenApple.jpg" />
     <Image Include="..\..\..\..\Desktop\Stone.jpg" />
     <Image Include="..\..\..\..\Desktop\fondo.jpg" />
+    <Image Include="img\Stone.jpg">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\fondo.jpg">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\fire-animation-2.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\fire-animation-1.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\fighter-02.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\fighter-01.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\bomb.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\alien-02.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\alien-01.png">
+      <Filter>img</Filter>
+    </Image>
+    <Image Include="img\Stone.png">
+      <Filter>img</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="img">
+      <UniqueIdentifier>{2b40e714-bf0d-4dcd-ad37-f65be339a00d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
